# easy_auto_gui

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/index/: Index.vue
src/pages/index/components/: Aside.vue  Crop.vue  Main.vue
