[package]
name = "easy_auto_gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = {version = "*", features = ["winuser"] }
winit = "0.30.0"
rdev = "0.5.3"
once_cell = "1.19.0"
rsautogui = "0.2.2"
image = {version="0.24.6",  features = ["png"] }
base64 = "0.22.1"
device_query = "2.0.0"
scrap = "0.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
